# 3dviewer

./: .gitignore  CLAUDE.md  CMakeLists.txt  ZMQ_INTEGRATION.md  cc_out.txt  cc_out_2.txt  check_cc.py  check_cc_2.py  convert_log.py  convert_log_5.py  convert_log_6.py  convert_log_7.py  convert_log_8.py  convert_range_log.py  data_generator.py  debug_output.txt  debug_test.py  diag_out.txt  diag_result.txt  git_branch.txt  git_branch_vv.txt  git_log.txt  git_status.txt  h5_keys.txt  h5_structure.txt  h5_structure_utf8.txt  imageio_test.txt  inspect_h5.py  inspect_tiff.py  pip_list_venv.txt  pip_show.txt  pyproject.toml  quality_test_log.txt  reproduce_error.py  requirements.txt  run_server.py  test_imports.py  test_log.txt  test_out.txt  test_out_refined.txt  (+5 more)
.claude/: settings.local.json
prompts/: 3d noise filter.txt  4views update.txt  GUI changes .txt  data size limitation.txt  implement acquila_zmq.txt  update acquila_zmq.txt
src/: 3dviewer_gui.py  app_core.py  camera.py  command_interpreter.py  commands.md  diag_gemini.py  diag_ollama.py  filters.py  inspect_h5.py  llm_provider.py  logic_err.txt  main.cpp  main.py  qt_main.py  read_err.py  renderer.py  test_context_final.py  test_glfw.py  test_imgui.py  test_ollama_api.py  test_qt.py  test_rescaling.py  test_simple.py  transfer_functions.py  volume_loader.py  zmq_client.py  zmq_command_processor.py
src/acquila_zmq/: __init__.py  pyproject.toml
src/documentation_3dviewer/: commands for overlay volume.md
src/documentation_3dviewer/.obsidian/: workspace.json
src/shaders/: raymarch.frag  raymarch.vert  slice.frag  slice.vert  vpc_filter.frag
src/widgets/: gl_view.py  import_dialog.py  tf_editor.py
tests/: inspect_h5.py  reproduce_issue.py  test_filters.py  test_h5_dup.py  test_h5_loader.py  test_llm_parsing.py  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_8.txt  test_output_utf8.txt  test_quality_parsing.py  test_range_output.txt  test_range_output_utf8.txt  test_report.txt  test_results.md  test_tf_gen.py  verify_llm.py  verify_reduction.py
